<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BluetoothReader">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/FPToolbarPopupTheme">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/bluetooth_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/toolbar"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:background="@drawable/bg_dashed_rounded_edges"
        android:layout_margin="20dp"
        android:paddingStart="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_bluetooth"/>

        <TextView
            android:id="@+id/bt_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/fp_green"
            android:text="@string/reader_connected"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@+id/bluetooth_header"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:scrollbars="none"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/in"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:stackFromBottom="true"
            android:divider="#F9F9F9"
            android:dividerHeight="1dp"
            android:transcriptMode="alwaysScroll" />

        <LinearLayout
            android:layout_width="256dp"
            android:layout_height="228dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@mipmap/app_icon" />

            <TextView
                android:id="@+id/textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/fp_black" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="In Host"
                android:textColor="@color/fp_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/id_enroll_fp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/EnrolHost"
                android:textAllCaps="false"
                android:textColor="@color/fp_black"
                android:textSize="10sp"
                android:theme="@style/FPAutoButton" />


            <Button
                android:id="@+id/id_capture_fp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/CaptureHost"
                android:textAllCaps="false"
                android:textColor="@color/fp_black"
                android:textSize="10sp"
                android:theme="@style/FPAutoButton" />

            <Button
                android:id="@+id/id_search_fp"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/Match"
                android:textAllCaps="false"
                android:textColor="@color/fp_black"
                android:textSize="10sp"
                android:theme="@style/FPAutoButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/id_get_fp_img_200"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/getimage200"
                android:textAllCaps="false"
                android:textColor="@color/fp_black"
                android:textSize="10sp"
                android:theme="@style/FPAutoButton" />

            <Button
                android:id="@+id/id_get_fp_img_288"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/getimage288"
                android:textAllCaps="false"
                android:textColor="@color/fp_black"
                android:textSize="10sp"
                android:theme="@style/FPAutoButton" />

            <Button
                android:id="@+id/id_get_fp_img_360"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/getimage360"
                android:textAllCaps="false"
                android:textColor="@color/fp_black"
                android:textSize="10sp"
                android:theme="@style/FPAutoButton" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/id_get_data"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/getdata"
                android:textAllCaps="false"
                android:textColor="@color/fp_black"
                android:textSize="10sp"
                android:theme="@style/FPAutoButton" />

            <Button
                android:id="@+id/id_clear_db"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/ClearDB"
                android:textAllCaps="false"
                android:textColor="@color/fp_black"
                android:textSize="10sp" />


            <Button
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:visibility="invisible" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Device"
                android:textColor="@color/fp_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/id_get_sn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/getdevsn"
                android:textAllCaps="false"
                android:textColor="@color/fp_black"
                android:textSize="10sp"
                android:theme="@style/FPAutoButton" />

            <Button
                android:id="@+id/id_get_bat"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/getbat"
                android:textAllCaps="false"
                android:textColor="@color/fp_black"
                android:textSize="10sp"
                android:theme="@style/FPAutoButton" />


            <Button
                android:id="@+id/id_get_version"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/getversion"
                android:textAllCaps="false"
                android:textColor="@color/fp_black"
                android:textSize="10sp"
                android:theme="@style/FPAutoButton" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
